# serverless-twitter-proxy-app

./: .gitignore  Cargo.toml  README.md  package.json  serverless.yml
frontend/: package.json
frontend/public/: index.html  manifest.json
frontend/src/: App.tsx
frontend/src/api/: index.ts
frontend/src/component/: VideoPreview.tsx
frontend/src/parser/: index.test.ts  index.ts
src/: lib.rs
src/dynamodb/: access_count.rs  data_cache.rs  mod.rs
