[package]
name = "serverless-twitter-proxy-app"
version = "0.1.0"
authors = ["kenkoooo <kenkou.n@gmail.com>"]
edition = "2018"
publish = false

[dependencies]
anyhow = "1.0.40"
lambda_http = "0.3.0"
lambda_runtime = "0.3.0"
rusoto_core = "0.46.0"
rusoto_dynamodb = "0.46.0"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
tokio = { version = "1.6.1", features = ["rt", "macros"] }
